bazı değişiklikler yapıldı

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
     background-position: center;
     background-size: cover;
     position: relative;
-    background-image: url(lale2.jpg);
+    background-image: url(images/lale2.jpg);
 }
 
 nav {
